--- a/src/qt/forms/debugwindow.ui
+++ b/src/qt/forms/debugwindow.ui
@@ -893,6 +893,9 @@
              <property name="tabKeyNavigation">
               <bool>false</bool>
              </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
              <property name="textElideMode">
               <enum>Qt::ElideMiddle</enum>
              </property>
@@ -953,6 +956,9 @@
             <widget class="QTableView" name="banlistWidget">
              <property name="tabKeyNavigation">
               <bool>false</bool>
+             </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
              </property>
              <property name="sortingEnabled">
               <bool>true</bool>
